--- a/app/views/contacts/confirm.html.erb
+++ b/app/views/contacts/confirm.html.erb
@@ -2,7 +2,7 @@
   <h1>お問い合わせ</h1>
 </div>
 
-<%= form_for @contact, :url => contact_thanks_path do |f| %>
+<%= form_for @contact, :url => contacts_thanks_path do |f| %>
   <table class="table">
     <tr>
       <th>名前</th>
