--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @contact, :url => contact_confirm_path do |f| %>
+<%= form_for @contact, :url => contacts_confirm_path do |f| %>
   <div class="page-header">
     <h1>お問い合わせ</h1>
   </div>
